--- a/src/app/bank-details/bank-details.component.html
+++ b/src/app/bank-details/bank-details.component.html
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div *ngIf="bankDetails && bankDetails.length == 0">
-                        <h1>Sorry, No bank account added in your profile, to add bank account click on plus icon</h1>
+                        <h1 class="text-white">Sorry, No bank account added in your profile, to add bank account click on plus icon</h1>
                     </div>
                     <div class="event_bank_detail">
                         <div class="event_hashtag text-center">
