--- a/src/app/my-event-details/my-event-details.component.html
+++ b/src/app/my-event-details/my-event-details.component.html
@@ -64,7 +64,7 @@
                                     <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                         src="{{path}}{{singleEventDetails.profilePhoto}}">
                                 </div>
-                                <p class="text-white">{{item.activityName}}</p>
+                                <p class="text-white" title="{{item.activityName}}">{{item.activityName}}</p>
                             </div>
                             <!-- </span> -->
                             <div class="collect1_img" (click)="totalCollection(eventId)" *ngIf="isCelebrant">
@@ -101,7 +101,7 @@
                                     <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                         src="{{path}}{{singleEventDetails.profilePhoto}}">
                                 </div>
-                                <p class="text-white">Invited Guestes</p>
+                                <p class="text-white" title="Invited Guestes">Invited Guestes</p>
                             </div>
                             <div class="collect1_img" *ngIf="isCelebrant">
                                 <div class="collect_img" (click)="autoMessage(eventId)">
@@ -115,7 +115,7 @@
                                     <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                         src="{{path}}{{singleEventDetails.profilePhoto}}">
                                 </div>
-                                <p class="text-white">Select Bank Account</p>
+                                <p class="text-white" title="Select Bank Account">Select Bank Account</p>
                             </div>
                         </div>
                     </div>
